# iupred

./: .bumpversion.cfg  .coveragerc  .cruft.json  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-testing-unit.yml
docs/: about.md  index.md  reference.md
docs/community/: contribute-codebase.md  contribute-docs.md  contribute.md  index.md
docs/reference/source/iupred/: _metadata-docs.md
docs/tutorials/: batch_prediction.md  low_memory.md  single_sequence.md
iupred/: __init__.py  _cli.py  _download.py  _metadata.py  aiupred.py  iupred2a.py
reference/: index.html
search/: search_index.json
tests/: conftest.py  test_aiupred.py  test_common.py  test_iupred2.py  test_optional_torch.py
tutorials/batch_prediction/: index.html
tutorials/low_memory/: index.html
tutorials/single_sequence/: index.html
