[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Zsuzsanna Dosztányi, Gábor Erdős", email="zsuzsanna.dosztanyi@ttk.elte.hu"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]
description = "IUPred and AIUPred: Prediction of intrinsically disordered protein regions"
license = "CC-BY-NC-ND-4.0"
maintainers = [
    {name="Zsuzsanna Dosztányi, Gábor Erdős", email="zsuzsanna.dosztanyi@ttk.elte.hu"},
]
name = "iupred"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.1"

[project.optional-dependencies]
dev = [
    "distlib",
    "pre-commit",
    "bump2version",
    "twine",
]
docs = [
    "mkdocs-material>=9.6.14",
    "pymdown-extensions>=10.15",
    "mkdocstrings[python]>=0.29.1,<0.30"
]
security = [
    "bandit"
]
tests = [
    "pytest>=6.0",
    "pytest-cov",
    "coverage>=6.0",
    "codecov-cli>=10.2.0",
    "diff_cover",
    "ruff",
]
aiupred = [
    "torch>=1.9",
]

[project.scripts]
iupred = "iupred._cli:main"

[project.urls]
Documentation = "https://saezlab.github.io/iupred"
Homepage = "https://github.com/saezlab/iupred"
Issues = "https://github.com/saezlab/iupred/issues"
Repository = "https://github.com/saezlab/iupred"


#---- Hatchling: build backend configuration
[tool.hatch.build.targets.wheel]
packages = ["iupred"]

[tool.hatch.build.targets.sdist]
include = [
    "/iupred",
]

#---- Bandit: tool for security analysis
[tool.bandit]
exclude_dirs = [".venv", "venv", ".tox", "build", "dist"]
skips = [
    "B101"  # Name: assert_used
]

#---- Coverage: a tool used to measure code coverage of Python programs
[tool.coverage.run]
omit = [
	"**/test_*.py",
]
source = ["iupred"]

#---- Cruft: a tool to manage and update projects based on templates
[tool.cruft]
skip = [
  "tests",
  "iupred/__init__.py",
  "iupred/_metadata.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]

#--- Pytest: a lightweight and scalable testing tool using the pytest framework
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]
filterwarnings = [
]
markers = [
    "aiupred: mark test as requiring AIUPred models (run with --run-aiupred)",
]
python_files = "test_*.py"
testpaths = [
  "tests",
]
xfail_strict = true

#---- RSTcheck: a tool to lint reStructuredText (.rst) files.
[tool.rstcheck]
ignore_directives = [
    "automodule",
    "toctree",
]
ignore_messages = '(Unknown target name:.*|No (directive|role) entry for "(auto)?(class|method|property|function|func|mod|attr)" in module "docutils\.parsers\.rst\.languages\.en"\.)'
ignore_roles = ["ref"]
report_level = "INFO"

#---- Ruff: a fast Python linter and formatter.
[tool.ruff]
extend-include = [ "*.ipynb" ]
line-length = 80
target-version = "py39"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
exclude = [
    "docs/_build"
]
ignore = [
    # flake8-annotations (ANN) - legacy code without type hints
    "ANN001",  # Missing type annotation for function argument
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN204",  # Missing return type annotation for special method
    "ANN205",  # Missing return type annotation for staticmethod
    "ANN206",  # Missing return type annotation for classmethod
    # flake8-bugbear (B)
    "B008",  # Name: function-call-in-default-argument
    "B024",  # Name: abstract-base-class-without-abstract-method
    "B905",  # Name: zip-without-explicit-strict (strict= requires Python 3.10+)
    # pydocstyle (D)
    "D100",  # Name: undocumented-public-module
    "D101",  # Name: undocumented-public-class
    "D102",  # Name: undocumented-public-method
    "D103",  # Name: undocumented-public-function
    "D104",  # Name: undocumented-public-package
    "D105",  # Name: undocumented-magic-method
    "D107",  # Name: undocumented-public-init
    "D200",  # Name: unnecessary-multiline-docstring
    "D202",  # Name: blank-line-after-function
    "D203",  # Name: incorrect-blank-line-before-class
    "D205",  # Name: blank-line-required-between-summary-and-description
    "D213",  # Name: multi-line-summary-second-line
    "D400",  # Name: missing-trailing-period
    "D401",  # Name: non-imperative-mood
    "D415",  # Name: first-line-should-end-with-punctuation
    # Error (E)
    "E251",  # Name: unexpected-spaces-around-keyword-parameter-equals
    "E303",  # Name: too-many-blank-lines
    "E501",  # Name: line too long
    "E731",  # Name: lambda-assignment
    "E741",  # allow I, O, l as variable names -> I is the identity matrix
    # pyupgrade (UP)
    "UP008",  # Name: super-call-with-parameters (legacy code)
    "UP032",  # Name: f-string (legacy code uses .format())
]
select = [
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error detected by Pycodestyle
    "F",  # Errors detected by Pyflakes
    "I",  # isort
    "RUF100",  # Report unused noqa directives
    "TID",  # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",  # Warning detected by Pycodestyle
    "Q",  # Consistent quotes
    "S307",  # eval() detection
    "ANN"  # flake8-annotations
]
unfixable = ["UP"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
known-first-party = [ "iupred" ]
known-third-party = ["numpy", "pandas"]
length-sort = true
lines-after-imports = 2
no-lines-before = ["local-folder"]
order-by-type = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["D104", "F401"]
"docs/*" = ["I"]
"docs/src/conf.py" = ["D100"]
"tests/*" = ["D"]
"tests/conftest.py" = ["D101", "D102", "D103", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

